09-171023/myocaml/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET REC var var EQ expr SEMISEMI
   4           | QUIT SEMISEMI

   5  expr : LET var EQ expr IN expr
   6       | LET REC var var EQ expr IN expr
   7       | IF expr THEN expr ELSE expr
   8       | FUN var ARROW expr
   9       | or_expr

  10  or_expr : or_expr OR and_expr
  11          | and_expr

  12  and_expr : and_expr ANDAND comp_expr
  13           | comp_expr

  14  comp_expr : arith_expr EQ arith_expr
  15            | arith_expr LT arith_expr
  16            | arith_expr

  17  arith_expr : arith_expr PLUS factor_expr
  18             | arith_expr MINUS factor_expr
  19             | factor_expr

  20  factor_expr : factor_expr TIMES app_expr
  21              | factor_expr DIV app_expr
  22              | app_expr

  23  app_expr : app_expr atomic_expr
  24           | atomic_expr

  25  atomic_expr : INT
  26              | BOOL
  27              | ID
  28              | LPAR expr RPAR

  29  var : ID

  30  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	QUIT  shift 10
	.  error

	toplevel  goto 11
	expr  goto 12
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (25)

	.  reduce 25


state 4
	atomic_expr : BOOL .  (26)

	.  reduce 26


state 5
	atomic_expr : ID .  (27)

	.  reduce 27


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . REC var var EQ expr SEMISEMI  (3)
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . REC var var EQ expr IN expr  (6)

	ID  shift 20
	REC  shift 21
	.  error

	var  goto 22


state 7
	expr : FUN . var ARROW expr  (8)

	ID  shift 20
	.  error

	var  goto 23


state 8
	expr : IF . expr THEN expr ELSE expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 25
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 9
	atomic_expr : LPAR . expr RPAR  (28)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 26
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 10
	toplevel : QUIT . SEMISEMI  (4)

	SEMISEMI  shift 27
	.  error


state 11
	%entry% : '\001' toplevel .  (30)

	.  reduce 30


state 12
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 28
	.  error


state 13
	expr : or_expr .  (9)
	or_expr : or_expr . OR and_expr  (10)

	OR  shift 29
	IN  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	SEMISEMI  reduce 9


state 14
	or_expr : and_expr .  (11)
	and_expr : and_expr . ANDAND comp_expr  (12)

	ANDAND  shift 30
	IN  reduce 11
	OR  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11


state 15
	and_expr : comp_expr .  (13)

	.  reduce 13


state 16
	comp_expr : arith_expr . EQ arith_expr  (14)
	comp_expr : arith_expr . LT arith_expr  (15)
	comp_expr : arith_expr .  (16)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	LT  shift 34
	IN  reduce 16
	OR  reduce 16
	ANDAND  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16


state 17
	arith_expr : factor_expr .  (19)
	factor_expr : factor_expr . TIMES app_expr  (20)
	factor_expr : factor_expr . DIV app_expr  (21)

	TIMES  shift 35
	DIV  shift 36
	IN  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	EQ  reduce 19
	LT  reduce 19
	OR  reduce 19
	ANDAND  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	SEMISEMI  reduce 19


state 18
	factor_expr : app_expr .  (22)
	app_expr : app_expr . atomic_expr  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 22
	PLUS  reduce 22
	TIMES  reduce 22
	MINUS  reduce 22
	DIV  reduce 22
	EQ  reduce 22
	LT  reduce 22
	OR  reduce 22
	ANDAND  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	RPAR  reduce 22
	SEMISEMI  reduce 22

	atomic_expr  goto 37


state 19
	app_expr : atomic_expr .  (24)

	.  reduce 24


state 20
	var : ID .  (29)

	.  reduce 29


state 21
	toplevel : LET REC . var var EQ expr SEMISEMI  (3)
	expr : LET REC . var var EQ expr IN expr  (6)

	ID  shift 20
	.  error

	var  goto 38


state 22
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (5)

	EQ  shift 39
	.  error


state 23
	expr : FUN var . ARROW expr  (8)

	ARROW  shift 40
	.  error


state 24
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . REC var var EQ expr IN expr  (6)

	ID  shift 20
	REC  shift 41
	.  error

	var  goto 42


state 25
	expr : IF expr . THEN expr ELSE expr  (7)

	THEN  shift 43
	.  error


state 26
	atomic_expr : LPAR expr . RPAR  (28)

	RPAR  shift 44
	.  error


state 27
	toplevel : QUIT SEMISEMI .  (4)

	.  reduce 4


state 28
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 29
	or_expr : or_expr OR . and_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	and_expr  goto 45
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 30
	and_expr : and_expr ANDAND . comp_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	comp_expr  goto 46
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 31
	arith_expr : arith_expr PLUS . factor_expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	factor_expr  goto 47
	app_expr  goto 18
	atomic_expr  goto 19


state 32
	arith_expr : arith_expr MINUS . factor_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	factor_expr  goto 48
	app_expr  goto 18
	atomic_expr  goto 19


state 33
	comp_expr : arith_expr EQ . arith_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	arith_expr  goto 49
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 34
	comp_expr : arith_expr LT . arith_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	arith_expr  goto 50
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 35
	factor_expr : factor_expr TIMES . app_expr  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	app_expr  goto 51
	atomic_expr  goto 19


state 36
	factor_expr : factor_expr DIV . app_expr  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	app_expr  goto 52
	atomic_expr  goto 19


state 37
	app_expr : app_expr atomic_expr .  (23)

	.  reduce 23


state 38
	toplevel : LET REC var . var EQ expr SEMISEMI  (3)
	expr : LET REC var . var EQ expr IN expr  (6)

	ID  shift 20
	.  error

	var  goto 53


state 39
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 54
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 40
	expr : FUN var ARROW . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 55
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 41
	expr : LET REC . var var EQ expr IN expr  (6)

	ID  shift 20
	.  error

	var  goto 56


state 42
	expr : LET var . EQ expr IN expr  (5)

	EQ  shift 57
	.  error


state 43
	expr : IF expr THEN . expr ELSE expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 58
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 44
	atomic_expr : LPAR expr RPAR .  (28)

	.  reduce 28


state 45
	or_expr : or_expr OR and_expr .  (10)
	and_expr : and_expr . ANDAND comp_expr  (12)

	ANDAND  shift 30
	IN  reduce 10
	OR  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10


state 46
	and_expr : and_expr ANDAND comp_expr .  (12)

	.  reduce 12


state 47
	arith_expr : arith_expr PLUS factor_expr .  (17)
	factor_expr : factor_expr . TIMES app_expr  (20)
	factor_expr : factor_expr . DIV app_expr  (21)

	TIMES  shift 35
	DIV  shift 36
	IN  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	EQ  reduce 17
	LT  reduce 17
	OR  reduce 17
	ANDAND  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17


state 48
	arith_expr : arith_expr MINUS factor_expr .  (18)
	factor_expr : factor_expr . TIMES app_expr  (20)
	factor_expr : factor_expr . DIV app_expr  (21)

	TIMES  shift 35
	DIV  shift 36
	IN  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18
	EQ  reduce 18
	LT  reduce 18
	OR  reduce 18
	ANDAND  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	SEMISEMI  reduce 18


state 49
	comp_expr : arith_expr EQ arith_expr .  (14)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 31
	MINUS  shift 32
	IN  reduce 14
	OR  reduce 14
	ANDAND  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14


state 50
	comp_expr : arith_expr LT arith_expr .  (15)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 31
	MINUS  shift 32
	IN  reduce 15
	OR  reduce 15
	ANDAND  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15


state 51
	factor_expr : factor_expr TIMES app_expr .  (20)
	app_expr : app_expr . atomic_expr  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 20
	PLUS  reduce 20
	TIMES  reduce 20
	MINUS  reduce 20
	DIV  reduce 20
	EQ  reduce 20
	LT  reduce 20
	OR  reduce 20
	ANDAND  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	SEMISEMI  reduce 20

	atomic_expr  goto 37


state 52
	factor_expr : factor_expr DIV app_expr .  (21)
	app_expr : app_expr . atomic_expr  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 21
	PLUS  reduce 21
	TIMES  reduce 21
	MINUS  reduce 21
	DIV  reduce 21
	EQ  reduce 21
	LT  reduce 21
	OR  reduce 21
	ANDAND  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	RPAR  reduce 21
	SEMISEMI  reduce 21

	atomic_expr  goto 37


state 53
	toplevel : LET REC var var . EQ expr SEMISEMI  (3)
	expr : LET REC var var . EQ expr IN expr  (6)

	EQ  shift 59
	.  error


state 54
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 60
	SEMISEMI  shift 61
	.  error


state 55
	expr : FUN var ARROW expr .  (8)

	.  reduce 8


state 56
	expr : LET REC var . var EQ expr IN expr  (6)

	ID  shift 20
	.  error

	var  goto 62


state 57
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 63
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 58
	expr : IF expr THEN expr . ELSE expr  (7)

	ELSE  shift 64
	.  error


state 59
	toplevel : LET REC var var EQ . expr SEMISEMI  (3)
	expr : LET REC var var EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 65
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 60
	expr : LET var EQ expr IN . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 66
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 61
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 62
	expr : LET REC var var . EQ expr IN expr  (6)

	EQ  shift 67
	.  error


state 63
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 60
	.  error


state 64
	expr : IF expr THEN expr ELSE . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 68
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 65
	toplevel : LET REC var var EQ expr . SEMISEMI  (3)
	expr : LET REC var var EQ expr . IN expr  (6)

	IN  shift 69
	SEMISEMI  shift 70
	.  error


state 66
	expr : LET var EQ expr IN expr .  (5)

	.  reduce 5


state 67
	expr : LET REC var var EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 71
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 68
	expr : IF expr THEN expr ELSE expr .  (7)

	.  reduce 7


state 69
	expr : LET REC var var EQ expr IN . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 24
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 72
	or_expr  goto 13
	and_expr  goto 14
	comp_expr  goto 15
	arith_expr  goto 16
	factor_expr  goto 17
	app_expr  goto 18
	atomic_expr  goto 19


state 70
	toplevel : LET REC var var EQ expr SEMISEMI .  (3)

	.  reduce 3


state 71
	expr : LET REC var var EQ expr . IN expr  (6)

	IN  shift 69
	.  error


state 72
	expr : LET REC var var EQ expr IN expr .  (6)

	.  reduce 6


26 terminals, 12 nonterminals
31 grammar rules, 73 states
